--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+    <link rel="shortcut icon" href="images/Weather-icon.png" type="image/x-icon">
+
     <script>
         $(document).ready(function () {
             $('.carousel.slide.mx-auto').carousel({
