Made a change in image slider

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <br>
 
     <div id="carouselExample" class="carousel slide mx-auto" style="width: 50%; height: 20%; margin: auto;"
-        data-ride="carousel">
+        data-bs-ride="carousel" data-bs-interval="10000">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="images/image1.jpg" class="d-block w-100" alt="image1">
@@ -79,10 +79,11 @@
         </button>
     </div><br><br>
 
-    
+
     <div class="card bg-success-subtle overflow-x-auto" style="width: auto; margin: auto; padding-top: 20px;">
         <div class="d-flex" role="search">
-            <input id="searchLbl" class="form-control me-2" type="search" placeholder="Search Location" aria-label="Search">
+            <input id="searchLbl" class="form-control me-2" type="search" placeholder="Search Location"
+                aria-label="Search">
             <button id="searchBtn" class="btn btn-outline-success" type="submit">Search</button>
         </div>
         <br>
